--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit
 pandas
 pymupdf
-numpy<2
-opencv-python-headless==4.9.0.80
+numpy
+opencv-python-headless
 pillow
-paddleocr>=2.7.0
-paddlepaddle==3.2.2
+paddleocr
+paddlepaddle
 openai
 xlsxwriter
