--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit
-pandas
+pandas<2.0.0
 pymupdf
 numpy
-opencv-python-headless
+opencv-python-headless>=4.9.0.80
 pillow
-paddleocr
-paddlepaddle
+paddleocr>=2.7.0
+paddlepaddle>=2.6.0
 openai
 xlsxwriter
