--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit
 pandas
 pymupdf
-numpy<2.0.0
-opencv-python-headless>=4.9.0.80
+numpy==2.3.5
+opencv-python-headless==4.10.0.84
 pillow
-paddleocr>=2.7.0
-paddlepaddle>=2.6.0
+paddleocr>=2.8.0
+paddlepaddle==3.2.2
 openai
 xlsxwriter
