--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ numpy<2.0.0
 opencv-python-headless==4.10.0.84
 pillow
 paddleocr==2.7.3
-paddlepaddle==2.6.0
+paddlepaddle>=2.6.0
 openai
 xlsxwriter
